--- a/index/default.css
+++ b/index/default.css
@@ -38,9 +38,11 @@ body {
 
 header {
     background-color: #64c2eb;
-    height: 75px;
+    height: 90px;
     float: left;
     width: 100%;
+    position: absolute;
+    top : 0px;
 
 }
 
@@ -61,20 +63,19 @@ footer {
     background-color: #64c2eb;
 }
 
-.contents{
-    width: 100%;
-    height: 50%;    
+.content{
+    margin-top: 100px;
 }
 
 .footer_menu_table{
     text-align: center;    
-    margin: 10px auto;
+    margin: 5px auto;
     background-color: #ffffff;
     font-weight: bold;
     
 }
 .footer_menu_table tr td{
-    width: 60px;
+    width: 70px;
     padding : 0 10px ;
     background-color: #ffffff;font-size : 10px;
 }
