--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -41,6 +41,8 @@ header {
     height: 90px;
     float: left;
     width: 100%;
+    position: absolute;
+    top : 0px;
 
 }
 
@@ -61,9 +63,8 @@ footer {
     background-color: #64c2eb;
 }
 
-.contents{
-    width: 100%;
-    height: 50%;    
+.content{
+    margin-top: 100px;
 }
 
 .footer_menu_table{
