--- a/index/default.css
+++ b/index/default.css
@@ -84,6 +84,18 @@ footer {
     background-color: #ffffff;
 }
 
+
+
+
+
+
+
+
+
+
+
+/*==================================OOTD CSS==================================*/
+
 .ootd_hashtag{
     width: 33%;
     overflow: hidden;
