--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -102,7 +102,7 @@ footer {
     overflow: hidden;
 }
 
-#ootd_text{
+#ootdtext{
     border: 1px solid #757575;
     width: 100%;
     height: 100px;
