--- a/index/default.css
+++ b/index/default.css
@@ -42,7 +42,7 @@ header {
     float: left;
     width: 100%;
     position: absolute;
-    top : 0px;
+    top: 0px;
 
 }
 
@@ -52,7 +52,7 @@ footer {
     position: absolute;
     bottom: 0px;
     width: 100%;
-    
+
 }
 
 
@@ -63,24 +63,26 @@ footer {
     background-color: #64c2eb;
 }
 
-.content{
+.content {
     margin-top: 100px;
 }
 
-.footer_menu_table{
-    text-align: center;    
+.footer_menu_table {
+    text-align: center;
     margin: 5px auto;
     background-color: #ffffff;
     font-weight: bold;
-    
-}
-.footer_menu_table tr td{
-    width: 70px;
-    padding : 0 10px ;
-    background-color: #ffffff;font-size : 10px;
+
 }
 
-.menuicons{
+.footer_menu_table tr td {
+    width: 70px;
+    padding: 0 10px;
+    background-color: #ffffff;
+    font-size: 10px;
+}
+
+.menuicons {
     background-color: #ffffff;
 }
 
@@ -96,32 +98,89 @@ footer {
 
 /*==================================OOTD CSS==================================*/
 
-.ootd_hashtag{
+::-webkit-scrollbar {
+    display: none;
+}
+
+
+.ootd_hashtag {
     width: 33%;
     overflow: hidden;
-    color : #ffffff;
+    color: #ffffff;
     float: left;
     background-color: #64c2eb;
     border: 2px solid #ffffff;
-    padding : 10px 10px;
+    padding: 10px 10px;
     text-align: center;
 }
 
-.ootd_hs{
+.ootd_hs {
     padding-left: 5px;
     overflow: hidden;
 }
 
-#ootdtext{
+#ootdtext {
     border: 1px solid #757575;
     width: 100%;
     height: 100px;
 }
 
-.ootd_hasktag_true{
-    background-color : #30b0e7;
+.ootd_hasktag_true {
+    background-color: #30b0e7;
 }
 
-.ootd_hashtag_false{    
+.ootd_hashtag_false {
     background-color: #64c2eb;
+}
+
+
+/*리스트 출력 CSS*/
+
+.ootdlistarea{
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+
+.ootdposttable {
+    margin-top: 20px;
+    width: 30%;
+    float: left;
+    margin-left: 2.5%;
+    border-spacing: -3px;
+    line-height: 14px;
+    
+}
+
+
+.postthumnail {
+    width: 100%;
+    height: width;
+    border-radius: 3px;
+    margin-bottom: 6px;
+}
+
+.ootdwriter {
+    color: #424242;
+    font-weight: bold;
+    font-size: 12px;
+    
+}
+
+.ootdlocation {
+    color: #757575;
+    font-size: 12px;
+}
+
+.ootdlistlike {
+    color: #ee7f7b;
+    font-size: 11px;
+    font-weight: bold;
+}
+
+a1 {
+    letter-spacing: -1px;
+
+    
 }
