--- a/index/default.css
+++ b/index/default.css
@@ -181,6 +181,25 @@ footer {
 
 a1 {
     letter-spacing: -1px;
-
     
+}
+
+.regFormButton{
+    background-color :  #64c2eb;
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    background-size: contain;    
+    position: absolute;
+    bottom : 70px;
+    right: 10px;
+    
+}
+
+.regFormButton img {
+    width: 50px;
+    height: 50px;
+    background-color :  #64c2eb;
+    background-size: contain;
+    border-radius: 100px;
 }
