--- a/mwOOTD - 복사본/src/main/webapp/css/default.css
+++ b/mwOOTD - 복사본/src/main/webapp/css/default.css
@@ -45,7 +45,7 @@ header {
     height: 90px;
     float: left;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top : 0px;
 
 }
@@ -93,6 +93,13 @@ footer {
     background-color: #ffffff;
 }
 
+.bottomArea{
+	width:max;
+	height : 90px;
+}
+
+
+/* ---------------------- OOTD CSS ---------------------- */
 
 
 .ootd_hashtag{
@@ -132,6 +139,7 @@ footer {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 
@@ -142,7 +150,7 @@ footer {
     margin-left: 2.5%;
     border-spacing: -3px;
     line-height: 14px;
-    
+     
 }
 
 
@@ -175,3 +183,6 @@ a1 {
     letter-spacing: -1px;
 
 }
+
+
+/* ---------------------- OOTD CSS 끝 --------------------- */
