--- a/index/default.css
+++ b/index/default.css
@@ -1,5 +1,4 @@
 /*
-
 기본 파란색 : #64c2eb
 진한 파란색 : #30b0e7
 기본 회색 : #757575
@@ -7,7 +6,6 @@
 바탕 아주 옅은 회색 : #f5f5f5
 강조 컬러 빨강 : #ee7f7b
 강조 컬러 노랑 : #ffd74e
-
 */
 
 /*한글*/
@@ -31,6 +29,12 @@
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
 body {
     padding: 0;
     margin: 0;
@@ -41,18 +45,22 @@ header {
     height: 90px;
     float: left;
     width: 100%;
-    position: absolute;
-    top: 0px;
+    position: fixed;
+    top : 0px;
 
 }
 
 footer {
     background-color: #ffffff;
     height: 60px;
-    position: absolute;
-    bottom: 0px;
+    clear:both;
     width: 100%;
+     position: fixed;
 
+ bottom: 0;
+
+ left: 0;
+    
 }
 
 
@@ -63,83 +71,75 @@ footer {
     background-color: #64c2eb;
 }
 
-.content {
+.content{
     margin-top: 100px;
+    height: max;
 }
 
-.footer_menu_table {
-    text-align: center;
+.footer_menu_table{
+    text-align: center;    
     margin: 5px auto;
     background-color: #ffffff;
     font-weight: bold;
-
+    
 }
-
-.footer_menu_table tr td {
+.footer_menu_table tr td{
     width: 70px;
-    padding: 0 10px;
+    padding : 0 10px ;
+    background-color: #ffffff;font-size : 10px;
+}
+
+.menuicons{
     background-color: #ffffff;
-    font-size: 10px;
 }
 
-.menuicons {
-    background-color: #ffffff;
-}
-
-
-
-
-
-
-
-
-
-
-
-/*==================================OOTD CSS==================================*/
-
-::-webkit-scrollbar {
-    display: none;
+.bottomArea{
+	width:max;
+	height : 90px;
 }
 
 
-.ootd_hashtag {
+/* ---------------------- OOTD CSS ---------------------- */
+
+
+.ootd_hashtag{
     width: 33%;
     overflow: hidden;
-    color: #ffffff;
+    color : #ffffff;
     float: left;
     background-color: #64c2eb;
     border: 2px solid #ffffff;
-    padding: 10px 10px;
+    padding : 10px 10px;
     text-align: center;
 }
 
-.ootd_hs {
+.ootd_hs{
     padding-left: 5px;
     overflow: hidden;
 }
 
-#ootdtext {
+#ootdtext{
     border: 1px solid #757575;
     width: 100%;
     height: 100px;
 }
 
-.ootd_hasktag_true {
-    background-color: #30b0e7;
+.ootd_hasktag_true{
+    background-color : #30b0e7;
 }
 
-.ootd_hashtag_false {
+.ootd_hashtag_false{    
     background-color: #64c2eb;
 }
 
 
-/*리스트 출력 CSS*/
+/*ootd리스트 출력 CSS*/
 
 .ootdlistarea{
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 
@@ -150,7 +150,7 @@ footer {
     margin-left: 2.5%;
     border-spacing: -3px;
     line-height: 14px;
-    
+     
 }
 
 
@@ -181,25 +181,23 @@ footer {
 
 a1 {
     letter-spacing: -1px;
-    
+
 }
 
 .regFormButton{
-    background-color :  #64c2eb;
+    background-image: url(image/icon/write.png);
     width: 50px;
     height: 50px;
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
     border-radius: 100px;
-    background-size: contain;    
+    border : 0px;
+    background-color:  #64c2eb;
     position: absolute;
-    bottom : 70px;
-    right: 10px;
-    
+    bottom : 80px;
+    right: 15px;
 }
 
-.regFormButton img {
-    width: 50px;
-    height: 50px;
-    background-color :  #64c2eb;
-    background-size: contain;
-    border-radius: 100px;
-}
+
+/* ---------------------- OOTD CSS 끝 --------------------- */
