--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -184,5 +184,20 @@ a1 {
 
 }
 
+.regFormButton{
+    background-image: url(http://localhost:8080/ootd/image/icon/write.png);
+    width: 50px;
+    height: 50px;
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 100px;
+    border : 0px;
+    background-color:  #64c2eb;
+    position: fixed;
+    bottom : 80px;
+    right: 15px;
+}
+
 
 /* ---------------------- OOTD CSS 끝 --------------------- */
