--- a/index/default.css
+++ b/index/default.css
@@ -11,6 +11,8 @@
 /*한글*/
 /*font-family: 'Nanum Gothic', sans-serif;*/
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+/*font-family: 'Noto Sans KR', sans-serif;*/
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
 
 /*영문*/
@@ -26,18 +28,20 @@
     margin: 0;
     background-color: #f5f5f5;
     color: #757575;
-    font-family: 'Nanum Gothic', sans-serif;
 }
 
 
 ::-webkit-scrollbar {
     display: none;
+    
 }
 
 
 body {
     padding: 0;
     margin: 0;
+    
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 header {
@@ -56,10 +60,9 @@ footer {
     clear:both;
     width: 100%;
      position: fixed;
-
- bottom: 0;
-
- left: 0;
+    bottom: 0;
+    left: 0;
+    font-family: 'Nanum Gothic', sans-serif;
     
 }
 
@@ -140,6 +143,7 @@ footer {
     max-width: 800px;
     margin: 0 auto;
     overflow: hidden;
+    
 }
 
 
@@ -199,5 +203,57 @@ a1 {
     right: 15px;
 }
 
+/*POST보여주는 css*/
+.ootdposttable{
+    width: 97%;
+    
+    
+}
 
+.postviewarea{
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    overflow: hidden;
+    
+}
+.ootdpostphoto{
+    margin-top: 10px;
+}
+
+.ootdposttable_side{
+    padding: 0px;
+    width: 20px;
+}
+
+.ootdbmk img{
+    margin-right: 10px;
+    float: right;
+}
+
+.ootdpostviewlinethree td{
+    padding: 15px 0px;
+}
+
+pv1 {
+    color:  #64c2eb;
+    font-weight: 300;
+    font-size: 15px;
+}
+
+pv2 {
+    float: right;
+    font-size: 14px;
+}
+
+.needborder{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid  #757575;      
+    
+}
+
+.ootdcommenttd{
+    padding-top: 10px;
+}
 /* ---------------------- OOTD CSS 끝 --------------------- */
