--- a/index/default.css
+++ b/index/default.css
@@ -39,8 +39,7 @@
 
 body {
     padding: 0;
-    margin: 0;
-    
+    margin: 0;    
     font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -189,7 +188,7 @@ a1 {
 }
 
 .regFormButton{
-    background-image: url(image/icon/write.png);
+    background-image: url(http://localhost:8080/ootd/image/icon/write.png);
     width: 50px;
     height: 50px;
     background-size: 30px;
@@ -204,8 +203,8 @@ a1 {
 }
 
 /*POST보여주는 css*/
-.ootdposttable{
-    width: 97%;
+.ootdpostviewtable{
+    width: 100%;
     
     
 }
@@ -227,7 +226,6 @@ a1 {
 }
 
 .ootdbmk img{
-    margin-right: 10px;
     float: right;
 }
 
