--- a/index/default.css
+++ b/index/default.css
@@ -254,4 +254,20 @@ pv2 {
 .ootdcommenttd{
     padding-top: 10px;
 }
+
+.ootddrop{
+    width: 50px;
+    height: 50px;
+    display: none;
+    position: absolute;
+    background-color: aquamarine;    
+}
+
+.ootddrop ul{
+    list-style: none;
+}
+
+.ootdrop li{
+    margin: 0px;
+}
 /* ---------------------- OOTD CSS 끝 --------------------- */
