--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -266,4 +266,8 @@ pv2 {
     padding: 5px 10px;
     border: 1px solid #ddd;
 }
+
+.preview img{
+    width: 50px;
+}
 /* ---------------------- OOTD CSS 끝 --------------------- */
