--- a/index/default.css
+++ b/index/default.css
@@ -257,17 +257,17 @@ pv2 {
 
 .ootddrop{
     width: 50px;
-    height: 50px;
     display: none;
     position: absolute;
     background-color: aquamarine;    
 }
 
-.ootddrop ul{
-    list-style: none;
+.ootddropcontent{
+    padding: 5px 10px;
+    border: 1px solid #ddd;
 }
 
-.ootdrop li{
-    margin: 0px;
+.preview img{
+    width: 50px;
 }
 /* ---------------------- OOTD CSS 끝 --------------------- */
