--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -199,7 +199,7 @@ a1 {
     border-radius: 100px;
     border: 0px;
     background-color: #64c2eb;
-    position: absolute;
+    position: fixed;
     bottom: 80px;
     right: 15px;
 }
