--- a/index/default.css
+++ b/index/default.css
@@ -143,7 +143,8 @@ footer {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    overflow: hidden;
+    overflow: scroll;
+    /*원래히든*/
 
 }
 
@@ -215,7 +216,7 @@ a1 {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    overflow: hidden;
+    overflow: scroll;
 
 }
 
@@ -273,6 +274,12 @@ pv2 {
 .preview img {
     width: 50px;
 }
+
+.ootdposthashtag{
+    padding-bottom: 10px;
+    padding-left: 20px;
+}
+
 
 /* ---------------------- OOTD CSS 끝 --------------------- */
 /*
