--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -99,7 +99,7 @@ footer {
 
 .bottomArea {
     width: max;
-    height: 90px;
+    height: 120px;
 }
 
 
@@ -143,7 +143,8 @@ footer {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    overflow: hidden;
+    overflow: scroll;
+    /*원래히든*/
 
 }
 
@@ -207,6 +208,7 @@ a1 {
 /*POST보여주는 css*/
 .ootdpostviewtable {
     width: 100%;
+
 
 }
 
@@ -272,6 +274,12 @@ pv2 {
 .preview img {
     width: 50px;
 }
+
+.ootdposthashtag{
+    padding-bottom: 10px;
+    padding-left: 20px;
+}
+
 
 /* ---------------------- OOTD CSS 끝 --------------------- */
 /*
