--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -160,6 +160,11 @@ footer {
 }
 
 
+.thumnailtr{
+    max-height: 240px;
+
+}
+
 .postthumnail {
     width: 100%;
     height: width;
@@ -359,4 +364,17 @@ pv2 {
     border : 0px;
     width: 80%;
     border-bottom: 1px solid #424242;
+}
+
+
+.ootdproductdiv img{
+    width: 20%;
+    max-width: 80px;
+    margin-right: 10px;
+}
+
+
+.ootdproductdiv{
+	margin-left : 20px;
+    
 }
