--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -378,3 +378,74 @@ pv2 {
 	margin-left : 20px;
     
 }
+
+
+.ootdcmtphoto {
+    float: left;
+    width: 10%;
+}
+
+.ootdcmttable {
+    width: 100%;
+}
+
+.ootdcmttable img {
+    width:40px;
+    
+}
+
+.ootdcmttable td:nth-child(1) {
+    width: 42px;
+    
+}
+
+
+.ootdcmttable td:nth-child(2) {
+    padding-left: 10px;
+    font-weight: bold;
+    overflow: hidden;
+}
+
+.ootdcmttable td:nth-child(4) {
+    float : right;
+    font-size: 10px;
+    overflow: hidden;
+}
+
+
+.ootdcmttext {
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
+
+.modal-body {
+    height: 500px;
+    overflow: scroll;
+}
+
+.ootdcomment{
+    margin-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+
+.oocdcmtinput{
+    width:80%;
+    height: 50px;
+    border: 1px solid #ddd;
+    float : left;    
+}
+
+.ootdcmntsubmit{
+    border : 0px;
+    width:18%;
+    height: 50px;
+    background-color: #ddd;
+    border-radius: 5px;
+}
+
+
+.ootdclose{
+    float: right;
+    overflow: hidden;
+}
