--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -449,3 +449,19 @@ pv2 {
     float: right;
     overflow: hidden;
 }
+
+a{
+    text-decoration: none;
+    color: #757575;
+}
+
+a:link, a:visited, a:active, a:hover{
+	 text-decoration: none;
+	 color: #757575;
+}
+
+button:link, button:visited, button:active, button:hover, button:focus{
+    border: none;
+    outline:none;     
+}
+
