--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -465,3 +465,22 @@ button:link, button:visited, button:active, button:hover, button:focus{
     outline:none;     
 }
 
+
+
+
+.ootdmodifycmt{
+        width:80%;
+    height: 50px;
+    border: 1px solid #ddd;
+    float : left;    
+}
+
+
+.ootdcmtmodibutton{
+        border : 0px;
+    width:18%;
+    height: 50px;
+    background-color: #ddd;
+    border-radius: 5px;
+}
+
