--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -75,7 +75,7 @@ footer {
 
 .content {
     margin-top: 100px;
-    height: max;
+   
 }
 
 .footer_menu_table {
@@ -126,6 +126,8 @@ footer {
     border: 1px solid #757575;
     width: 100%;
     height: 100px;
+    overflow: scroll;
+    white-space: normal;
 }
 
 .ootd_hasktag_true {
@@ -413,13 +415,15 @@ pv2 {
 }
 
 
+
+
 .ootdcmttext {
     padding-left: 10px;
     padding-bottom: 10px;
+    overflow : scroll;    
 }
 
 .modal-body {
-    height: 500px;
     overflow: scroll;
 }
 
