--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -428,6 +428,7 @@ pv2 {
 }
 
 .ootdcomment{
+	padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ddd;
 }
@@ -481,7 +482,7 @@ button:link, button:visited, button:active, button:hover, button:focus{
 
 
 .ootdcmtmodibutton{
-        border : 0px;
+    border : 0px;
     width:18%;
     height: 50px;
     background-color: #ddd;
