--- a/index/default.css
+++ b/index/default.css
@@ -75,7 +75,7 @@ footer {
 
 .content {
     margin-top: 100px;
-    height: max;
+   
 }
 
 .footer_menu_table {
@@ -428,6 +428,7 @@ pv2 {
 }
 
 .ootdcomment{
+	padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ddd;
 }
@@ -437,7 +438,7 @@ pv2 {
     width:80%;
     height: 50px;
     border: 1px solid #ddd;
-    float : left;    
+    float : left;
 }
 
 .ootdcmntsubmit{
@@ -473,16 +474,18 @@ button:link, button:visited, button:active, button:hover, button:focus{
 
 
 .ootdmodifycmt{
-        width:80%;
+    
     height: 50px;
     border: 1px solid #ddd;
-    float : left;    
+    float : left; 
+    
+    margin-right : 10px;   
 }
 
 
 .ootdcmtmodibutton{
-        border : 0px;
-    width:18%;
+    border : 0px;
+    width:50px;;
     height: 50px;
     background-color: #ddd;
     border-radius: 5px;
