--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -474,6 +474,7 @@ button:link, button:visited, button:active, button:hover, button:focus{
 
 
 .ootdmodifycmt{
+	margin-top : 5px;
     width:100%;
     height: 50px;
     border: 1px solid #ddd;
