--- a/index/default.css
+++ b/index/default.css
@@ -62,6 +62,7 @@ footer {
     bottom: 0;
     left: 0;
     font-family: 'Nanum Gothic', sans-serif;
+       z-index : 1000;  
 
 }
 
@@ -98,10 +99,14 @@ footer {
 }
 
 .bottomArea {
-    width: max;
-    height: 120px;
+    width: 800px;
+    height: 120px;    
 }
 
+.bottomArea img{
+	width : 100%;
+	height: 100px;
+}
 
 /* ---------------------- OOTD CSS ---------------------- */
 
@@ -145,9 +150,14 @@ footer {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    overflow: scroll;
+    /* overflow: scroll; */
     /*원래히든*/
 
+}
+
+.ootdlistline{
+    width:100%;
+    background-color: red;
 }
 
 
@@ -474,7 +484,8 @@ button:link, button:visited, button:active, button:hover, button:focus{
 
 
 .ootdmodifycmt{
-    width:75%;
+	margin-top : 5px;
+    width:100%;
     height: 50px;
     border: 1px solid #ddd;
     float : left; 
@@ -483,11 +494,4 @@ button:link, button:visited, button:active, button:hover, button:focus{
 }
 
 
-.ootdcmtmodibutton{
-    border : 0px;
-    width:50px;;
-    height: 50px;
-    background-color: #ddd;
-    border-radius: 5px;
-}
 
