--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -62,6 +62,7 @@ footer {
     bottom: 0;
     left: 0;
     font-family: 'Nanum Gothic', sans-serif;
+       z-index : 1000;  
 
 }
 
@@ -98,10 +99,13 @@ footer {
 }
 
 .bottomArea {
-    width: max;
-    height: 120px;
+    height: 120px;    
 }
 
+.bottomArea img{
+	width : 100%;
+	height: 100px;
+}
 
 /* ---------------------- OOTD CSS ---------------------- */
 
@@ -145,9 +149,14 @@ footer {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
-    overflow: scroll;
+    /* overflow: scroll; */
     /*원래히든*/
 
+}
+
+.ootdlistline{
+    width:100%;
+    background-color: red;
 }
 
 
