--- a/index/default.css
+++ b/index/default.css
@@ -434,6 +434,7 @@ pv2 {
 
 .modal-body {
     overflow: scroll;
+    max-height: 600px;
 }
 
 .ootdcomment{
@@ -487,10 +488,39 @@ button:link, button:visited, button:active, button:hover, button:focus{
     width:100%;
     height: 50px;
     border: 1px solid #ddd;
-    float : left; 
-    
+    float : left;     
     margin-right : 10px;   
 }
 
+.ootd_cmt_align_check {
+    color : #64c2eb;    
+}
 
+.ootdProductImage {
+    display: block;
+    margin: 0px auto;
+    margin-bottom: 10px;
+}
+
+.ootdproduct {
+    text-align: center;
+}
+
+
+
+
+
+.ootdnaverapiimage {
+    float: left;
+    overflow: hidden;
+}
+
+.ootdapiproductname {
+    width: 70%;
+    padding: 0 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+}
 
