수정진행중

--- a/index/default.css
+++ b/index/default.css
@@ -115,7 +115,7 @@ footer {
     overflow: hidden;
     color: #ffffff;
     float: left;
-    background-color: #64c2eb;
+    background-color: #757575;
     border: 2px solid #ffffff;
     padding: 10px 10px;
     text-align: center;
@@ -139,7 +139,7 @@ footer {
 }
 
 .ootd_hashtag_false {
-    background-color: #64c2eb;
+    background-color: #757575;
 }
 
 
