--- a/index/default.css
+++ b/index/default.css
@@ -524,3 +524,49 @@ button:link, button:visited, button:active, button:hover, button:focus{
 
 }
 
+
+
+/*랭크*/
+#rank-list a {
+    color: black;
+    text-decoration: none;
+}
+
+
+#rank-list {
+    overflow: hidden;
+    width: 100%;
+    height: 20px;
+    margin: 0;
+}
+
+#rank-list dt {
+    display: none;
+}
+
+#rank-list dd {
+    position: relative;
+    margin: 0;
+}
+
+#rank-list ol {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+#rank-list li {
+    height: 20px;
+    line-height: 20px;
+}
+
+.rank_up_red{
+    color : red;
+}
+
+.rank_down_blue{
+    color : blue;
+}
