--- a/mwOOTD/src/main/webapp/css/default.css
+++ b/mwOOTD/src/main/webapp/css/default.css
@@ -101,7 +101,7 @@ footer {
 	height: 100px;
 }
 
-/* ---------------------- OOTD CSS ---------------------- */
+/* ---------------------- OOTD CSS 시작 ---------------------- */
 .ootd_hashtag {
 	width: 33%;
 	overflow: hidden;
@@ -190,7 +190,7 @@ a1 {
 }
 
 .regFormButton {
-	background-image: url(http://localhost:8080/ootd/image/icon/write.png);
+	background-image: url(http://ec2-13-125-232-157.ap-northeast-2.compute.amazonaws.com:8080/ootd/image/icon/write.png);
 	width: 50px;
 	height: 50px;
 	background-size: 30px;
@@ -275,10 +275,7 @@ pv2 {
 	padding-left: 20px;
 }
 
-/* ---------------------- OOTD CSS 끝 --------------------- */
-/*
-테스트CSS
-*/
+
 .img-upload-label {
 	display: inline-block;
 	padding: .5em .75em;
@@ -289,7 +286,7 @@ pv2 {
 	line-height: normal;
 	vertical-align: middle;
 	background-image:
-		url(http://localhost:8080/ootd/image/icon/fileuploadbutton.png);
+		url(http://ec2-13-125-232-157.ap-northeast-2.compute.amazonaws.com:8080/ootd/image/icon/fileuploadbutton.png);
 	background-size: 80px;
 	cursor: pointer;
 	border-radius: .25em;
@@ -552,4 +549,6 @@ p5{
  	margin-top : 8px;
  	border: 1px solid #757575;
 }
+
+/* ---------------------------------------------------OOTD끝 */
 
